[package]
name = "ovn"
version = "0.1.0"

[dependencies.graph_map]
git="https://github.com/frankmcsherry/graph-map.git"

[dependencies.differential-dataflow]
git="https://github.com/frankmcsherry/differential-dataflow.git"

[dependencies.timely]
git="https://github.com/frankmcsherry/timely-dataflow.git"

[dependencies.abomonation]
git="https://github.com/frankmcsherry/abomonation.git"

[dev-dependencies]
getopts="0.2.14"
rand="0.3.13"
byteorder="0.4.2"
itertools="^0.6"

[dependencies]
fnv="1.0.2"
num = "0.1.40"
serde = "1.0.14"
serde_derive = "1.0.14"
serde_json = "1.0.3"

[features]
default = []
logging = ["timely/logging"]

[profile.release]
opt-level = 1
debug = false
rpath = false
lto = false
debug-assertions = false

[[bin]]
name = "ovn"
path = "./ovn.rs"